# feedly-notify-line

./: pyproject.toml
src/: feedly_notify_line.py
