[tool.poetry]
name = "feedly-notify-line"
version = "0.1.0"
description = ""
authors = ["kota ishizuka <kota.ishizuka1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
